--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
+            "styles": [ {
+              "input": "src/material-theme.scss"
+            },
               "src/styles.css"
             ],
             "scripts": []
