--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "dependencies": {
     "@angular/animations": "^9.0.6",
     "@angular/cdk": "^9.2.0",
+    "@angular/cli": "^9.1.0",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
-    "@angular/cli": "^9.1.0",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
@@ -28,7 +28,10 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-handlebars": "^4.0.0",
+    "nodemailer": "^6.4.6",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
